--- a/src/app/design/templates/creature/creature.component.html
+++ b/src/app/design/templates/creature/creature.component.html
@@ -42,6 +42,7 @@
     <app-editable-text
       class="creature__description"
       [heading]="'Description'"
+      [ariaLevel]="2"
       [placeholder]="'Add a description for ' + creature().name"
       [text]="creature().description"
       [serverModel]="creatureServerModel()?.description"
