--- a/src/app/design/molecules/editor/editor.component.html
+++ b/src/app/design/molecules/editor/editor.component.html
@@ -17,9 +17,9 @@
     @if (_settings().skin === "oxide-dark") {
       <editor
         #editor
-        [id]="editorId"
+        [id]="id()"
         [init]="_settings()"
-        [name]="editorId"
+        [name]="id()"
         [(ngModel)]="textModel"
         class="mb-2"
         [class.editor--focus]="inFocus()"
@@ -60,8 +60,8 @@
 
         <editor
           [init]="_settings()"
-          [name]="editorId"
-          [id]="editorId"
+          [name]="id()"
+          [id]="id()"
           [(ngModel)]="textModel"
           class="mb-2"
         ></editor>
