--- a/src/app/design/templates/character/character.component.html
+++ b/src/app/design/templates/character/character.component.html
@@ -128,6 +128,7 @@
     <app-editable-text
       class="character__description"
       [heading]="'Description'"
+      [ariaLevel]="2"
       [placeholder]="'Add a description for ' + character().name"
       [text]="character().description"
       [serverModel]="characterServerModel()?.description"
