--- a/src/app/design/templates/quest/quest.component.html
+++ b/src/app/design/templates/quest/quest.component.html
@@ -56,6 +56,7 @@
     <app-editable-text
       class="quest__description"
       [heading]="'Description'"
+      [ariaLevel]="2"
       [placeholder]="'Add a description for ' + quest().name"
       [text]="quest().description"
       [canUpdate]="canUpdate()"
