--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -42,6 +42,7 @@
           [isUpdating]="entryEncounter.isUpdating"
           [state]="state()"
           [isInFocus]="encounterIndexInFocus() === $index"
+          [ariaLevel]="3"
           (connectionDelete)="connectionDelete.emit($event)"
           (connectionCreate)="connectionCreate.emit($event)"
           (encounterDelete)="onEncounterDelete($index)"
