--- a/src/app/design/organisms/encounter/encounter.component.html
+++ b/src/app/design/organisms/encounter/encounter.component.html
@@ -70,9 +70,13 @@
   <!-- Encounter -->
   @let encounterVal = encounter();
   @if (encounterVal) {
+    <label [for]="editorId" class="cdk-visually-hidden">
+      Description of encounter {{ encounterVal.title }}
+    </label>
     <app-editor
       #editor
       class="card__text"
+      [id]="editorId"
       [state]="textFieldState()"
       [canUpdate]="canUpdate()"
       [text]="encounterVal.description"
