--- a/src/app/design/templates/create-update/create-update.component.html
+++ b/src/app/design/templates/create-update/create-update.component.html
@@ -11,6 +11,7 @@
           (click)="cancel.emit()"
           [icon]="'times'"
           [kind]="'SECONDARY'"
+          [attr.aria-label]="'Cancel ' + heading()"
           [hotkey]="'q'"
           (hotkeyPressed)="cancel.emit()"
         ></button>
