--- a/src/app/design/atoms/badge/badge.component.html
+++ b/src/app/design/atoms/badge/badge.component.html
@@ -17,7 +17,7 @@
 <ng-template #content>
   <div
     class="badge"
-    [title]="text()"
+    [attr.title]="shouldCutText() ? text() : null"
     [ngClass]="{
       'bg-primary': kind() === 'PRIMARY',
       'bg-secondary': kind() === 'SECONDARY',
