--- a/src/app/design/molecules/image-card/image-card.component.html
+++ b/src/app/design/molecules/image-card/image-card.component.html
@@ -10,6 +10,9 @@
           [width]="100"
           priority
         />
+        <div class="card__title-link fs-5">
+          {{ text() }}
+        </div>
       </a>
 
       <button
@@ -17,6 +20,7 @@
         btn
         [kind]="'NONE'"
         [icon]="inFocus() ? 'xmark' : 'expand'"
+        [attr.aria-label]="'Expand image view of ' + text()"
         (click)="
           inFocus()
             ? closeBtnClicked$.next($event)
@@ -30,20 +34,17 @@
     @if (imageUrls().length > 1) {
       <div class="card__img-selectors" (click)="$event.preventDefault()">
         @for (_ of imageUrls(); track $index) {
+          @let imageIndex = $index + 1;
           <button
             class="card__img-selector"
             [class.card__img-selector--active]="$index === currentImageIndex()"
+            [attr.aria-label]="'Show image ' + imageIndex"
             (click)="selectorClicked$.next({ index: $index, event: $event })"
           >
-            {{ $index + 1 }}
+            {{ imageIndex }}
           </button>
         }
       </div>
     }
-    <a class="card__title-link" [routerLink]="link()">
-      <h5 class="card-title">
-        {{ text() }}
-      </h5>
-    </a>
   </div>
 </div>
