--- a/src/app/design/organisms/location-accordion/location-accordion.component.html
+++ b/src/app/design/organisms/location-accordion/location-accordion.component.html
@@ -5,6 +5,7 @@
     <a
       btn
       title="Create Location"
+      aria-label="Create Location"
       [kind]="'PRIMARY'"
       [size]="'SMALL'"
       [icon]="'plus'"
