--- a/src/app/design/organisms/mobile-header/mobile-header.component.html
+++ b/src/app/design/organisms/mobile-header/mobile-header.component.html
@@ -13,7 +13,7 @@
         <app-icon [icon]="'bars'" />
       </button>
     }
-    <a class="navbar-brand" [routerLink]="titleUrl()">
+    <a class="navbar-brand" [routerLink]="titleUrl()" aria-label="To Home Page">
       <strong>
         <img
           class="navbar-brand-icon"
