--- a/src/app/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.html
@@ -1,7 +1,13 @@
 <app-page-container>
   <article class="container campaign">
     <div class="campaign__edit-container">
-      <a btn [routerLink]="updateUrl" [icon]="'pencil'" [kind]="'SECONDARY'">
+      <a
+        btn
+        [routerLink]="updateUrl"
+        [icon]="'pencil'"
+        [kind]="'SECONDARY'"
+        aria-label="Update Campaign"
+      >
       </a>
     </div>
 
