--- a/src/app/design/atoms/badge/badge.component.html
+++ b/src/app/design/atoms/badge/badge.component.html
@@ -1,6 +1,6 @@
 @switch (interactionMode()) {
   @case ("LINK") {
-    <a type="button" class="badge-button" [routerLink]="link()">
+    <a class="badge-button" [routerLink]="link()">
       <ng-container [ngTemplateOutlet]="content" />
     </a>
   }
