--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.html
@@ -5,6 +5,7 @@
         class="entry__link"
         [routerLink]="article.link"
         [title]="article.title"
+        [attr.aria-label]="article.title"
       >
         <app-icon-card
           [icon]="article.icon"
