--- a/src/app/design/organisms/search-hit/search-hit.component.html
+++ b/src/app/design/organisms/search-hit/search-hit.component.html
@@ -2,6 +2,7 @@
   class="search-hit card container row"
   [routerLink]="article().getAbsoluteRouterUrl()"
   [style]="'--search-border-color: var(--' + article().article_type + '-color)'"
+  [attr.aria-label]="article().name"
 >
   <div class="search-hit__heading col-md-4">
     <h6 class="mb-0">
