--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,18 @@
 @let contentId = "main-content";
 @let currentUrl = currentUrl$ | async;
 
-<a
-  class="skip-to-content fw-bold fs-4"
-  [href]="currentUrl ? currentUrl + '#' + contentId : undefined"
->
-  @if (!currentUrl) {
-    Failed to build skip-url. Please reload the page
-  } @else {
-    Skip to content
-  }
-</a>
+@if (currentUrl != null) {
+  <a
+    class="skip-to-content fw-bold fs-4"
+    [href]="currentUrl ? currentUrl + '#' + contentId : undefined"
+  >
+    @if (!currentUrl) {
+      Failed to build skip-url. Please reload the page
+    } @else {
+      Skip to content
+    }
+  </a>
+}
 
 <app-page
   [serverUrl]="serverUrl"
