--- a/src/app/design/molecules/collapsible-panel/collapsible-panel.component.html
+++ b/src/app/design/molecules/collapsible-panel/collapsible-panel.component.html
@@ -1,5 +1,12 @@
 <div class="card" #panel>
-  <button btn class="card__button" (click)="togglePanel()">
+  <button
+    btn
+    class="card__button"
+    [id]="triggerId"
+    (click)="togglePanel()"
+    [attr.aria-controls]="contentId"
+    [attr.aria-expanded]="_isOpen()"
+  >
     <h5 class="card__heading">
       <span class="card__heading-text">
         <ng-content select="[heading]"></ng-content>
@@ -12,7 +19,12 @@
     </h5>
   </button>
 
-  <div class="card__body" [ngbCollapse]="!_isOpen()">
+  <div
+    class="card__body"
+    [ngbCollapse]="!_isOpen()"
+    [id]="contentId"
+    [attr.aria-labelledby]="triggerId"
+  >
     <app-separator></app-separator>
     <ng-content select="[body]"></ng-content>
   </div>
