--- a/src/app/design/molecules/search-field/search-field.component.html
+++ b/src/app/design/molecules/search-field/search-field.component.html
@@ -15,7 +15,6 @@
         [disabled]="!canSearch()"
         [(ngModel)]="searchString"
         [placeholder]="_placeholder()"
-        aria-label="Search"
         [hotkey]="'f'"
         (hotkeyPressed)="searchInput.focus()"
       />
@@ -24,7 +23,7 @@
       <button
         btn
         class="search__button"
-        [ariaLabel]="btnAriaLabel()"
+        [ariaLabel]="'Start searching for ' + searchInput.value"
         [ariaDisabled]="!canTriggerSearch"
         [disabled]="!canTriggerSearch"
         [kind]="canTriggerSearch ? 'PRIMARY' : 'PRIMARY-OUTLINE'"
