--- a/src/app/design/organisms/editable-text/editable-text.component.scss
+++ b/src/app/design/organisms/editable-text/editable-text.component.scss
@@ -22,6 +22,12 @@
       outline-offset: 4px;
     }
   }
+
+  &__container {
+    display: flex;
+    flex-direction: row;
+    gap: var(--spacer-3);
+  }
 }
 
 .field {
