--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,14 @@ blockquote {
   padding: var(--spacer-2) var(--spacer-0) var(--spacer-1) var(--spacer-4);
 }
 
+ul,
+ol,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .highlight {
   background-color: var(--highlight-gray);
 }
