--- a/src/app/design/organisms/filter-list/filter-list.component.html
+++ b/src/app/design/organisms/filter-list/filter-list.component.html
@@ -31,7 +31,7 @@
   <ul
     class="row"
     [attr.aria-label]="
-      'All ' + heading() + ' in this campaign, split into lists by first letter'
+      'All recorded ' + heading() + ', split into lists by first letter'
     "
   >
     @for (
