--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -105,9 +105,9 @@
 <ng-template #characterHeading>
   <h2 class="h3">Player Characters</h2>
 
-  <div class="row">
+  <ul class="row" aria-label="All player characters">
     @for (playerCharacter of playerCharacters(); track playerCharacter.name) {
-      <div
+      <li
         class="col-xl-3 col-lg-4 col-md-6 col-sm-6 overview__player-card player-card"
       >
         <div class="player-card__link">
@@ -126,9 +126,9 @@
             ></app-image-card>
           }
         </div>
-      </div>
+      </li>
     }
-  </div>
+  </ul>
 </ng-template>
 
 <ng-template #characterBody>
