--- a/src/app/design/organisms/filter-list/filter-list.component.scss
+++ b/src/app/design/organisms/filter-list/filter-list.component.scss
@@ -1,5 +1,5 @@
-.filter{
-  &__input{
+.filter {
+  &__input {
     background-color: transparent;
     border: 1px var(--bs-white) solid;
     border-radius: var(--bs-border-radius);
@@ -9,8 +9,8 @@
     width: 100%;
     height: var(--spacer-5);
     color: var(--bs-white);
-    
-    &:focus{
+
+    &:focus {
       background: rgba(255, 255, 255, 0.1);
       border-color: var(--bs-white);
       box-shadow: 0 0 0 2px var(--bs-white);
@@ -18,17 +18,22 @@
   }
 }
 
-.letter-list{
+.letter-list {
   padding-top: var(--spacer-4);
   padding-bottom: var(--spacer-4);
-  border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
-  
-  &__heading{
-    margin-bottom: var(--spacer-0);
+  border-bottom: var(--bs-border-width) var(--bs-border-style)
+    var(--bs-border-color);
+
+  &__heading {
+    margin-bottom: var(--spacer-2);
   }
-  
-  &__list{
-    list-style-type: disclosure-closed;
+
+  &__list {
     margin-bottom: var(--spacer-0);
+    padding-left: var(--spacer-4);
+  }
+
+  &__item {
+    list-style-type: disclosure-closed;
   }
 }
