Make edit toggle a toggle-button

--- a/src/app/design/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/design/molecules/edit-toggle/edit-toggle.component.html
@@ -1,6 +1,7 @@
 <button
   btn
   class="edit-toggle"
+  [attr.aria-pressed]="_toggled()"
   [kind]="buttonKind()"
   [icon]="_toggled() ? 'times' : 'pencil'"
   (click)="onClick()"
